# start-electron

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
----old-vue3----/: binding.gyp  index.html  package-lock.json  package.json  preload.js  vite.config.js
----old-vue3----/addon/: hello.cc
----old-vue3----/addon/testDll/: testDll.lib
----old-vue3----/test/: test-addon.js  test-pb.js  test-winston.js
addon/: hello.cc
addon/testDll/: testDll.h
cpp/: CMakeLists.txt  build-mac.sh  build-ubuntu.sh  build-win.bat
cpp/sample-dynamic-lib/: CMakeLists.txt  SampleDynamicLib.cpp  SampleDynamicLib.h
cpp/sample-main/: main.cpp
main/: .gitignore  binding.gyp  forge.config.js  main.js  package-lock.json  package.json  preload.js
main/addon/: sample.cc  sample.js
src/: App.vue
test/: test-addon.js  test-axios.js  test-ffi.js  test-pb.js  test-winston.js
testDll/: testDll.cpp
web/: package-lock.json  package.json
web/src/: App.tsx  store.ts
web/src/platform/: electron-bridge.ts  renderer.d.ts
